# spsim

./: .gitignore  AGENTS.md  README.md  format.sh  pyproject.toml  run.sh  setup.sh  spsim_d  test.sh  vis.sh
data/processed/: close_to_human.html  edit_distance_graph.html
data/processed/force/: force.css  force.html  force.js  force.json
scripts/: run.py  vis.py
src/species_similarity/: __init__.py  config.py  diff.py  fetch.py  images.py  nx_vis.py  pipeline.py  render.py  similarity.py
tests/: conftest.py  test_diff.py  test_fetch.py  test_graph.py  test_images.py  test_nx_vis.py  test_pipeline.py  test_similarity.py
