[project]
requires-python = ">=3.9,<3.10"
name = "spsim"
version = "0.2.0"
dependencies = [
    "requests>=2.32",
    "requests-cache>=1.2",
    "biopython>=1.83",
    "pyinaturalist>=0.10,<0.11",
    "jinja2>=3.1",
    "pandas",
    "rapidfuzz>=3.13.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "black>=24.4",
    "ruff>=0.5",
]

[tool.uv]
virtualenvs.in-project = true  # keep .venv local